refactor: downgrade jdk version to 11